--- a/public/partners.html
+++ b/public/partners.html
@@ -112,55 +112,55 @@
           <h1>Партнеры и клиенты</h1>
           <div class="partners">
             <div class="partners__items">
-              <div class="partners__item"><a class="partners__link" href="https://www.hoppecke.com/" target="_blank"></a>
+              <div class="partners__item"><a class="partners__link" href="https://www.hoppecke.com/" target="_blank">https://www.hoppecke.com/</a>
                 <div class="partners__preview"><img class="partners__img" src="/img/partners/img-1.png" alt=""></div>
                 <div class="partners__info"><span class="partners__site">https://www.hoppecke.com/</span>
                   <p class="partners__name">Hoppecke Batterien</p>
                 </div>
               </div>
-              <div class="partners__item"><a class="partners__link" href="https://www.salicru.com/" target="_blank"></a>
+              <div class="partners__item"><a class="partners__link" href="https://www.salicru.com/" target="_blank">https://www.salicru.com/</a>
                 <div class="partners__preview"><img class="partners__img" src="/img/partners/img-2.png" alt=""></div>
                 <div class="partners__info"><span class="partners__site">https://www.salicru.com/</span>
                   <p class="partners__name">SALICRU, S.A.</p>
                 </div>
               </div>
-              <div class="partners__item"><a class="partners__link" href="http://www.gazprom.ru/" target="_blank"></a>
+              <div class="partners__item"><a class="partners__link" href="http://www.gazprom.ru/" target="_blank">http://www.gazprom.ru/</a>
                 <div class="partners__preview"><img class="partners__img" src="/img/partners/img-3.png" alt=""></div>
                 <div class="partners__info"><span class="partners__site">http://www.gazprom.ru/</span>
                   <p class="partners__name">ПАО «Газпром»</p>
                 </div>
               </div>
-              <div class="partners__item"><a class="partners__link" href="https://www.tplusgroup.ru/" target="_blank"></a>
+              <div class="partners__item"><a class="partners__link" href="https://www.tplusgroup.ru/" target="_blank">https://www.tplusgroup.ru/</a>
                 <div class="partners__preview"><img class="partners__img" src="/img/partners/img-4.png" alt=""></div>
                 <div class="partners__info"><span class="partners__site">https://www.tplusgroup.ru/</span>
                   <p class="partners__name">ООО "КЭС-Холдинг" - ПАО «Т Плюс»</p>
                 </div>
               </div>
-              <div class="partners__item"><a class="partners__link" href="http://www.rosseti.ru/" target="_blank"></a>
+              <div class="partners__item"><a class="partners__link" href="http://www.rosseti.ru/" target="_blank">http://www.rosseti.ru/</a>
                 <div class="partners__preview"><img class="partners__img" src="/img/partners/img-5.png" alt=""></div>
                 <div class="partners__info"><span class="partners__site">http://www.rosseti.ru/</span>
                   <p class="partners__name">Холдинг МРСК - ПАО "Россети"</p>
                 </div>
               </div>
-              <div class="partners__item"><a class="partners__link" href="http://www.novatek.ru/" target="_blank"></a>
+              <div class="partners__item"><a class="partners__link" href="http://www.novatek.ru/" target="_blank">http://www.novatek.ru/</a>
                 <div class="partners__preview"><img class="partners__img" src="/img/partners/img-6.png" alt=""></div>
                 <div class="partners__info"><span class="partners__site">http://www.novatek.ru/</span>
                   <p class="partners__name">ПАО «НОВАТЭК»</p>
                 </div>
               </div>
-              <div class="partners__item"><a class="partners__link" href="https://www.rosneft.ru/" target="_blank"></a>
+              <div class="partners__item"><a class="partners__link" href="https://www.rosneft.ru/" target="_blank">https://www.rosneft.ru/</a>
                 <div class="partners__preview"><img class="partners__img" src="/img/partners/img-7.png" alt=""></div>
                 <div class="partners__info"><span class="partners__site">https://www.rosneft.ru/</span>
                   <p class="partners__name">Роснефть</p>
                 </div>
               </div>
-              <div class="partners__item"><a class="partners__link" href="https://ekt.rt.ru/" target="_blank"></a>
+              <div class="partners__item"><a class="partners__link" href="https://ekt.rt.ru/" target="_blank">https://ekt.rt.ru/</a>
                 <div class="partners__preview"><img class="partners__img" src="/img/partners/img-8.png" alt=""></div>
                 <div class="partners__info"><span class="partners__site">https://ekt.rt.ru/</span>
                   <p class="partners__name">ПАО «Ростелеком»</p>
                 </div>
               </div>
-              <div class="partners__item"><a class="partners__link" href="https://www.ugmk.com/" target="_blank"></a>
+              <div class="partners__item"><a class="partners__link" href="https://www.ugmk.com/" target="_blank">https://www.ugmk.com/</a>
                 <div class="partners__preview"><img class="partners__img" src="/img/partners/img-9.png" alt=""></div>
                 <div class="partners__info"><span class="partners__site">https://www.ugmk.com/</span>
                   <p class="partners__name">Уральская горно-металлургическая компания</p>
